# electronics

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
cadbuildr/electronics/: __init__.py  _solids.py  board.py  constants.py  footprint.py  pcb.py  projects.py
cadbuildr/electronics/boards/: __init__.py  arduino_nano.py  arduino_uno.py  esp32_devkit.py  raspberry_pi.py  raspberry_pi_pico.py
cadbuildr/electronics/catalog/: __init__.py  catalog.py  digikey.py  package.py  part.py
cadbuildr/electronics/components/: __init__.py  connectors.py  diodes.py  ics.py  misc.py  passives.py
cadbuildr/electronics/data/: packages.json  parts.csv
cadbuildr/electronics/families/: __init__.py  _ipc.py  base.py  generators.py
docs/: COMPONENT_REFERENCE.md  SCALING.md  VISUAL_VERIFICATION.md
examples/: blinky.py  reference_boards.py
github-io/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
github-io/src/: main.tsx  pcbLocal.ts  styles.css
scripts/: check_collisions.py  render.py
tests/: test_catalog.py  test_pcb.py
