[project]
name = "cadbuildr-electronics"
version = "0.1.0"
description = "3D models of common PCB components plus a footprint-driven framework for assembling them into boards"
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
authors = [
    {name = "CADbuildr Team"},
]
dependencies = [
    "cadbuildr-foundation>=0.2.12,<0.3.0",
    "cadbuildr-stdlib>=0.0.0.2,<0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.cadbuildr.dependencies]
cadbuildr-foundation = "^0.2.12"

[tool.hatch.build.targets.wheel]
packages = [
    "cadbuildr",
]


[build-system]
requires = [
    "hatchling>=1.27.0",
]
build-backend = "hatchling.build"
